--- a/po/cs.po
+++ b/po/cs.po
@@ -840,7 +840,7 @@ msgstr ""
 #: rc.cpp:150
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Je-li zapnuto, po každém kliknutí na ikonu KCheckGMail  je tato možnost na "
