--- a/po/da.po
+++ b/po/da.po
@@ -836,7 +836,7 @@ msgstr ""
 #: rc.cpp:150
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Hvis indstillet, så fanger KCheckGMail det, hvis du ved en fejl kommer til "
