--- a/po/sv.po
+++ b/po/sv.po
@@ -845,7 +845,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Om aktiverad kommer KCheckGmail-ikonen att stängas av ett antal sekunder "
