--- a/po/de.po
+++ b/po/de.po
@@ -819,7 +819,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Wenn ausgewählt, wird das KCheckGmail Icon für ein paar Sekunden deaktiviert "
