--- a/po/el.po
+++ b/po/el.po
@@ -841,7 +841,7 @@ msgstr ""
 #: rc.cpp:150
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Αν είναι ενεργοποιημένο, κάθε φορά που κάνετε κλικ στο εικονίδιο KCheckGMail "
