--- a/po/et.po
+++ b/po/et.po
@@ -829,7 +829,7 @@ msgstr ""
 #: rc.cpp:150
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Märkimisel keelatakse KCheckGMaili ikoon pärast sellel klõpsamist mõneks "
