--- a/po/pt.po
+++ b/po/pt.po
@@ -842,7 +842,7 @@ msgstr ""
 #: rc.cpp:150
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Se activo, cada vez que clicar no ícone do KCheckGmail, este será "
