--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -798,7 +798,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Se ativado, a cada vez que voce clicar no icone do KCheckGmail o mesmo sera "
