--- a/po/sk.po
+++ b/po/sk.po
@@ -818,7 +818,7 @@ msgstr "Pri kliknutí na ikonu KCheckGmail spustiť internetový prehliadač."
 #, fuzzy
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "Pri každom kliknutí na ikonu KCheckGmail program preruší na niekoľko sekúnd "
