--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -815,7 +815,7 @@ msgstr "如果选择它，点击KCheckGmail图标时，启动KDE缺省浏览器"
 #: rc.cpp:150
 msgid ""
 "If enabled, every time you click on the KCheckGMail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
+"a few seconds, thus preventing you from accidentally opening more than one "
 "window"
 msgstr ""
 "如果选择它，每次你点击KCheckGmail图标时，将暂停这个功能几秒钟，用来防止你偶然"
