--- a/po/es.po
+++ b/po/es.po
@@ -39,18 +39,16 @@ msgid "Behavior"
 msgstr "Comportamiento"
 
 #: configdialog.cpp:46
-#, fuzzy
 msgid "Behavior Settings"
-msgstr "Configuración de red"
+msgstr "Configuración del comportamiento"
 
 #: configdialog.cpp:50
 msgid "Appearance"
-msgstr ""
+msgstr "Apariencia"
 
 #: configdialog.cpp:50
-#, fuzzy
 msgid "Appearance Settings"
-msgstr "Opciones avanzadas"
+msgstr "Opciones de apariencia"
 
 #: configdialog.cpp:54
 msgid "Advanced"
@@ -268,9 +266,8 @@ msgid "Unable to retrieve secure password"
 msgstr "No ha sido posible obtener la clave de forma segura"
 
 #: kcheckgmailcore.cpp:120
-#, fuzzy
 msgid "Configure &Notifications"
-msgstr "Configurar &Notificaciones..."
+msgstr "Configurar &Notificaciones"
 
 #: kcheckgmailcore.cpp:125
 msgid "&Configure KCheckGMail..."
@@ -298,7 +295,6 @@ msgid "Th&reads"
 msgstr "Co&nversaciones"
 
 #: kcheckgmailcore.cpp:268
-#, fuzzy, kde-format
 msgid ""
 "<p><center>Welcome to KCheckGMail!</center></p><p>You can locate KCheckGMail "
 "here: </p><p><center>%1</center></p>When you right-click on that icon you "
@@ -306,10 +302,10 @@ msgid ""
 "newest email of your account."
 msgstr ""
 "<p><center>¡Bienvenido a KCheckGMail!</center></p><p>Aquí puede encontrar "
-"KChechGMail: </p><p><center><img source=\"systray_shot\"></center></p> Al "
+"KCheckGMail: </p><p><center>%1</center></p> Al "
 "hacer clic con botón derecho del cursor en el icono aparecerá un menú, en el "
 "cual encontrará el menú \"Conversaciones\" que contiene los últimos mensajes "
-"de la cuenta."
+"de su cuenta."
 
 #: kcheckgmailcore.cpp:275
 msgid "Welcome"
@@ -336,29 +332,24 @@ msgid "Legal Information"
 msgstr "Información legal"
 
 #: kcheckgmailcore.cpp:390
-#, fuzzy
 msgid "<center><b>New mail arrived</b></center>"
-msgstr "Nuevo mensaje ha llegado: <i>%1</i>"
+msgstr "<center><b>Nuevo mensaje recibido</b></center"
 
 #: kcheckgmailcore.cpp:392
-#, kde-format
 msgid "<b>Sender:</b> <i>%1</i>"
-msgstr ""
+msgstr "<b>Remitente:</b> <i>%1</i>"
 
 #: kcheckgmailcore.cpp:399
-#, kde-format
 msgid "<b>Subject:</b> <i>%1</i>"
-msgstr ""
+msgstr "<b>Asunto:</b> <i>%1</i>"
 
 #: kcheckgmailcore.cpp:411
-#, fuzzy, kde-format
+#, kde-format
 msgid "There is <b>1</b> new mail message"
 msgid_plural "There are <b>%1</b> new mail messages"
 msgstr[0] ""
-" Hay <b>1</b> mensaje nuevo\n"
-"Hay <b>%n</b> mensajes nuevos"
+"Hay <b>1</b> mensaje nuevo\n"
 msgstr[1] ""
-" Hay <b>1</b> mensaje nuevo\n"
 "Hay <b>%n</b> mensajes nuevos"
 
 #: kcheckgmailcore.cpp:517
@@ -366,18 +357,18 @@ msgstr[1] ""
 msgctxt ""
 "format used to display the attachments (%1 is the icon, %2 is the file name)"
 msgid "<img src=\"%1\"> %2"
-msgstr ""
+msgstr "<img src=\"%1\"> %2"
 
 #: kcheckgmailcore.cpp:531
 #, kde-format
 msgid "Attachment: %2"
 msgid_plural "Attachments: %2"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Anexo: %2"
+msgstr[1] "Anexos: %2"
 
 #: kcheckgmailcore.cpp:548
 msgid "Open"
-msgstr ""
+msgstr "Abrir"
 
 #: kcheckgmailcore.cpp:570
 msgid "No account information has been entered. Do you want to quit?"
@@ -444,13 +435,13 @@ msgid "Version changed"
 msgstr "Versión cambiada"
 
 #: kcheckgmailtray.cpp:184
-#, fuzzy, kde-format
+#, kde-format
 msgid ""
 "<p>KCheckGMail is already running</p><p>You can find it here:</"
 "p><p><p><center>%1</center></p></p>"
 msgstr ""
-"<p> KCheckGMail está en ejecución</p><p>Lo puedes localizar aquí:</"
-"p><p><center><img source=\"systray_shot\"></center></p>"
+"<p>KCheckGMail ya se está ejecutando</p><p>Lo puedes localizar aquí:</"
+"p><p><p><center>%1</center></p></p>"
 
 #: kcheckgmailtray.cpp:185
 msgid "Already Running"
@@ -476,10 +467,13 @@ msgid ""
 "(C) 2007 Raphael Geissert\n"
 "(C) 2007 Luís Pereira"
 msgstr ""
+"(C) 2004 Matthew Wlazlo\n"
+"(C) 2007 Raphael Geissert\n"
+"(C) 2007 Luís Pereira"
 
 #: main.cpp:55
 msgid "Matthew Wlazlo"
-msgstr ""
+msgstr "Matthew Wlazlo"
 
 #: main.cpp:55
 msgid "Original author"
@@ -491,15 +485,15 @@ msgstr "Mantenedor"
 
 #: main.cpp:56
 msgid "Raphael Geissert"
-msgstr ""
+msgstr "Raphael Geissert"
 
 #: main.cpp:57
 msgid "Developer"
-msgstr ""
+msgstr "Desarrollador"
 
 #: main.cpp:57
 msgid "Luís Pereira"
-msgstr ""
+msgstr "Luís Pereira"
 
 #: main.cpp:58
 msgid "Everybody who helped testing and translating KCheckGMail"
@@ -528,13 +522,12 @@ msgstr "KCheckGMail ya está en ejecución!\n"
 #: rc.cpp:1
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr ""
+msgstr "Raphael Geissert"
 
 #: rc.cpp:2
-#, fuzzy
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "No hay mensajes sin leer"
+msgstr "atomo64@gmail.com"
 
 #. i18n: file: advancedsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, AdvancedSettingsBase)
@@ -561,9 +554,8 @@ msgstr "Buscar:"
 #. i18n: file: appearancesettingsbase.ui:15
 #. i18n: ectx: property (windowTitle), widget (QWidget, AppearanceSettingsBase)
 #: rc.cpp:14
-#, fuzzy
 msgid "AppearanceSettingsWidget"
-msgstr "AdvancedSettingsWidget"
+msgstr "AppearanceSettingsWidget"
 
 #. i18n: file: appearancesettingsbase.ui:24
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox1)
@@ -580,6 +572,8 @@ msgid ""
 "&Color used to display  the number\n"
 "of unread messages:"
 msgstr ""
+"&Color del indicador del número\n"
+"de mensajes sin leer\n"
 
 #. i18n: file: appearancesettingsbase.ui:46
 #. i18n: ectx: property (toolTip), widget (KColorButton, kcfg_TrayIconUnreadMessagesColor)
@@ -588,6 +582,7 @@ msgstr ""
 #: rc.cpp:24 rc.cpp:189
 msgid "Tray icon number of unread messages color selector"
 msgstr ""
+"Selector de color del número de mensajes sin leer en el ícono de la bara"
 
 #. i18n: file: appletsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, AppletSettingsBase)
@@ -604,35 +599,32 @@ msgstr "Depurar"
 #. i18n: file: appletsettingsbase.ui:28
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_AlertVersionChange)
 #: rc.cpp:33
-#, fuzzy
 msgid "Displa&y an alert if GMail version changes"
-msgstr "Mostrar un mensaje de alerta si la versión de GMail cambia"
+msgstr "&Mostrar un mensaje de alerta si la versión de Gmail cambia"
 
 #. i18n: file: appletsettingsbase.ui:38
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox3)
 #: rc.cpp:36
-#, fuzzy
 msgid "Fields displayed when only one email arrives"
-msgstr "Visualizar el asunto cuando un solo mensaje llega"
+msgstr "Campos a mostrar cuando un sólo mensaje llega"
 
 #. i18n: file: appletsettingsbase.ui:44
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_DisplaySubjectOnSingleMail)
 #: rc.cpp:39
 msgid "Sub&ject"
-msgstr ""
+msgstr "Asun&to"
 
 #. i18n: file: appletsettingsbase.ui:54
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_DisplaySenderOnSingleMail)
 #: rc.cpp:42
 msgid "Senders"
-msgstr ""
+msgstr "Remitentes"
 
 #. i18n: file: appletsettingsbase.ui:64
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_DisplaySnippetOnSingleMail)
 #: rc.cpp:45
-#, fuzzy
 msgid "Snippet"
-msgstr "Fragmentos de email"
+msgstr "Fragmento del mensaje"
 
 #. i18n: file: appletsettingsbase.ui:90
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox4)
@@ -644,13 +636,13 @@ msgstr "Navegador"
 #. i18n: ectx: property (text), widget (QRadioButton, kcfg_UseDefaultBrowser)
 #: rc.cpp:51
 msgid "&Use the default KDE browser"
-msgstr "&Usar el navegador por defecto de KD"
+msgstr "&Usar el navegador por defecto de KDE"
 
 #. i18n: file: appletsettingsbase.ui:106
 #. i18n: ectx: property (text), widget (QRadioButton, kcfg_UseAltBrowser)
 #: rc.cpp:54
 msgid "Use an alternative browser"
-msgstr "Utilizar un navegador alternativo"
+msgstr "Utilizar un navegador diferente"
 
 #. i18n: file: appletsettingsbase.ui:152
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_AllowLeftClickOpen)
@@ -664,7 +656,7 @@ msgstr "Abrir &navegador en Gmail con un click izquierdo"
 #. i18n: ectx: label, entry (CatchAccidentalClick), group (Applet Settings)
 #: rc.cpp:63 rc.cpp:147
 msgid "Catch accidental left clicks when launching the browser"
-msgstr "Capturar clicks izquierdos accidentales en la apertura del navegador"
+msgstr "Capturar clics izquierdos accidentales al lanzar el navegador"
 
 #. i18n: file: loginsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, LoginSettingsBase)
@@ -688,7 +680,7 @@ msgstr "Contraseña:"
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_PasswordFromWallet)
 #: rc.cpp:75
 msgid "&Use KDE Wallet to store password"
-msgstr "&Usar KDE Wallet para guardar la clave"
+msgstr "&Utilizar KDE Wallet para almacenar la clave"
 
 #. i18n: file: netsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, NetworkSettingsBase)
@@ -716,14 +708,14 @@ msgid ""
 "login procedure uses https regardless of this setting.</blockquote>"
 msgstr ""
 "<blockquote>Utilizar conexiones seguras al obtener correo nuevo. Notar que "
-"la identificación del usuario usa https a pesar del valor de esta opción.</"
+"la autentificación del usuario usa https a pesar del valor de esta opción.</"
 "blockquote>"
 
 #. i18n: file: netsettingsbase.ui:60
 #. i18n: ectx: property (text), widget (QCheckBox, kcfg_UseHTTPS)
 #: rc.cpp:90
 msgid "&Use https connections for checking mail"
-msgstr "&Usar conexiones https al obtener correo"
+msgstr "&Usar conexiones https al verificar el correo"
 
 #. i18n: file: prefs.kcfg:9
 #. i18n: ectx: whatsthis, entry (searchFor), group (Advanced Settings)
@@ -732,7 +724,7 @@ msgid ""
 "When checking for new email's this is the search query sent to Google Mail. "
 "Don't forget to add is:unread to improve the search."
 msgstr ""
-"Al buscar nuevos correos esta es la consulta enviada a Google Mail. No se "
+"Al buscar nuevos correos esta es la consulta enviada a Google Mail. No "
 "olvide de agregar is:unread para mejorar la búsqueda."
 
 #. i18n: file: prefs.kcfg:14
@@ -755,13 +747,13 @@ msgstr "Intervalo de verificación"
 #. i18n: ectx: whatsthis, entry (Interval), group (Network Settings)
 #: rc.cpp:108
 msgid "How many seconds to wait before checking for new mail."
-msgstr "Cuantos segundos esperar antes de comprobar si hay nuevo correo."
+msgstr "Cuántos segundos esperar antes de comprobar si hay nuevo correo."
 
 #. i18n: file: prefs.kcfg:26
 #. i18n: ectx: label, entry (UseHTTPS), group (Network Settings)
 #: rc.cpp:111
 msgid "Use https connections for checking mail"
-msgstr "Utilizar conexiones https al obtener correo"
+msgstr "Utilizar conexiones https al verificar el correo"
 
 #. i18n: file: prefs.kcfg:28
 #. i18n: ectx: whatsthis, entry (UseHTTPS), group (Network Settings)
@@ -885,150 +877,130 @@ msgstr ""
 #. i18n: ectx: label, entry (DisplaySenderOnSingleMail), group (Applet Settings)
 #: rc.cpp:168
 msgid "Display sender"
-msgstr ""
+msgstr "Mostrar remitente"
 
 #. i18n: file: prefs.kcfg:80
 #. i18n: ectx: whatsthis, entry (DisplaySenderOnSingleMail), group (Applet Settings)
 #: rc.cpp:171
 msgid "Display message sender"
-msgstr ""
+msgstr "Mostrar el remitente del mensaje"
 
 #. i18n: file: prefs.kcfg:84
 #. i18n: ectx: label, entry (DisplaySubjectOnSingleMail), group (Applet Settings)
 #: rc.cpp:174
 msgid "Display subject"
-msgstr ""
+msgstr "Mostrar el asunto"
 
 #. i18n: file: prefs.kcfg:85
 #. i18n: ectx: whatsthis, entry (DisplaySubjectOnSingleMail), group (Applet Settings)
 #: rc.cpp:177
 msgid "Display message subject"
-msgstr ""
+msgstr "Mostrar el asunto del mensaje"
 
 #. i18n: file: prefs.kcfg:89
 #. i18n: ectx: label, entry (DisplaySnippetOnSingleMail), group (Applet Settings)
 #: rc.cpp:180
-#, fuzzy
 msgid "Display snippet"
-msgstr "Fragmentos de email"
+msgstr "Mostrar fragmento"
 
 #. i18n: file: prefs.kcfg:90
 #. i18n: ectx: whatsthis, entry (DisplaySnippetOnSingleMail), group (Applet Settings)
 #: rc.cpp:183
 msgid "Display message snippet"
-msgstr ""
+msgstr "Mostrar fragmento del mensaje"
 
 #. i18n: file: prefs.kcfg:97
 #. i18n: ectx: label, entry (TrayIconUnreadMessagesColor), group (Appearance Settings)
 #: rc.cpp:186
-#, fuzzy
 msgid "Color used to display  the number of unread messages"
-msgstr "No hay mensajes sin leer"
+msgstr "Color utilizado para mostrar el número de mensajes sin leer"
 
 #: src/kcheckgmail.notifyrc:3
-#, fuzzy
 msgctxt "Comment"
 msgid "KCheckGMail"
 msgstr "KCheckGMail"
 
 #: src/kcheckgmail.notifyrc:6
-#, fuzzy
 msgctxt "Name"
 msgid "New Gmail Arrived"
-msgstr "Nuevo Gmail ha arrivado"
+msgstr "Nuevo Gmail ha llegado"
 
 #: src/kcheckgmail.notifyrc:23
-#, fuzzy
 msgctxt "Comment"
 msgid "New Gmail Arrived"
-msgstr "Nuevo Gmail ha arrivado"
+msgstr "Nuevo Gmail ha llegado"
 
 #: src/kcheckgmail.notifyrc:43
-#, fuzzy
 msgctxt "Name"
 msgid "Logged in to Gmail"
-msgstr "Identificado en Gmail"
+msgstr "Autentificado en Gmail"
 
 #: src/kcheckgmail.notifyrc:62
-#, fuzzy
 msgctxt "Comment"
 msgid "Logged in to Gmail"
-msgstr "Identificado en Gmail"
+msgstr "Autentificado en Gmail"
 
 #: src/kcheckgmail.notifyrc:84
-#, fuzzy
 msgctxt "Name"
 msgid "Failed to login to Gmail"
 msgstr "No se ha podido conectar a Gmail"
 
 #: src/kcheckgmail.notifyrc:104
-#, fuzzy
 msgctxt "Comment"
 msgid "Failed to login to Gmail"
 msgstr "No se ha podido conectar a Gmail"
 
 #: src/kcheckgmail.notifyrc:127
-#, fuzzy
 msgctxt "Name"
 msgid "Gmail version has changed"
 msgstr "La versión de Gmail ha cambiado"
 
 #: src/kcheckgmail.notifyrc:145
-#, fuzzy
 msgctxt "Comment"
 msgid "Gmail version has changed"
 msgstr "La versión de Gmail ha cambiado"
 
 #: src/kcheckgmail.notifyrc:166
-#, fuzzy
 msgctxt "Name"
 msgid "New Gmail session is open"
 msgstr "Una nueva sesión en Gmail ha sido abierta"
 
 #: src/kcheckgmail.notifyrc:182
-#, fuzzy
 msgctxt "Comment"
 msgid "Another session has been opened"
 msgstr "Se ha abierto otra sesión en Gmail"
 
 #: src/kcheckgmail.notifyrc:201
-#, fuzzy
 msgctxt "Name"
 msgid "Mail Snippet"
-msgstr "Fragmentos de email"
+msgstr "Fragmento del mensaje"
 
 #: src/kcheckgmail.notifyrc:216
-#, fuzzy
 msgctxt "Comment"
 msgid "Email snippets when moving the mouse over a threads menu entry"
-msgstr "Fragmento de email al mover el cursor sobre una conversación"
+msgstr "Fragmento de email al posicionar el cursor sobre una conversación"
 
 #: src/kcheckgmail.notifyrc:231
-#, fuzzy
 msgctxt "Name"
 msgid "No unread email"
 msgstr "No hay mensajes sin leer"
 
 #: src/kcheckgmail.notifyrc:245
-#, fuzzy
 msgctxt "Comment"
 msgid "Dummy notification triggered when there are no unread messages"
 msgstr "Simple notificación ejecutada cuando no hay mensajes sin leer"
 
 #: src/kcheckgmail.desktop:2
-#, fuzzy
 msgctxt "Name"
 msgid "KCheckGMail"
 msgstr "KCheckGMail"
 
 #: src/kcheckgmail.desktop:5
-#, fuzzy
 msgctxt "GenericName"
 msgid "New email notifier"
 msgstr "Notificador de correo nuevo"
 
 #: src/kcheckgmail.desktop:23
-#, fuzzy
 msgctxt "Comment"
 msgid ""
 "A Kicker applet to display how many email messages you have in your Gmail "
@@ -1054,24 +1026,8 @@ msgstr ""
 #~ "Archivo adjunto: %1\n"
 #~ "Archivos adjuntos: %1"
 
-#, fuzzy
-#~ msgid "Alt+Y"
-#~ msgstr "Alt+U"
-
-#~ msgid "Other"
-#~ msgstr "Otros"
-
 #~ msgid "Display sub&ject when only one new email arrives"
 #~ msgstr "Mostrar as&unto cuando un solo email ha llegado"
-
-#~ msgid "Alt+J"
-#~ msgstr "Alt+U"
-
-#~ msgid "Alt+U"
-#~ msgstr "Alt+U"
-
-#~ msgid "Alt+B"
-#~ msgstr "Alt+B"
 
 #~ msgid "Display message's subject when only one new email arrives"
 #~ msgstr "Visualizar el asunto del mensaje cuando un solo mensaje llega"
