Removes extra '\n' in Spanish translation
The extra '\n' actually caused a compilation fatal error.
Introduced by commit f303e9bc68bf0cfe5b2770f9b8ec39d212d55d6e

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/po/es.po
+++ b/po/es.po
@@ -348,7 +348,7 @@ msgstr "<b>Asunto:</b> <i>%1</i>"
 msgid "There is <b>1</b> new mail message"
 msgid_plural "There are <b>%1</b> new mail messages"
 msgstr[0] ""
-"Hay <b>1</b> mensaje nuevo\n"
+"Hay <b>1</b> mensaje nuevo"
 msgstr[1] ""
 "Hay <b>%n</b> mensajes nuevos"
 
@@ -573,7 +573,7 @@ msgid ""
 "of unread messages:"
 msgstr ""
 "&Color del indicador del número\n"
-"de mensajes sin leer\n"
+"de mensajes sin leer"
 
 #. i18n: file: appearancesettingsbase.ui:46
 #. i18n: ectx: property (toolTip), widget (KColorButton, kcfg_TrayIconUnreadMessagesColor)
