Fixes format specification in Spanish translation
Introduced by commit f303e9bc68bf0cfe5b2770f9b8ec39d212d55d6e

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/po/es.po
+++ b/po/es.po
@@ -350,7 +350,7 @@ msgid_plural "There are <b>%1</b> new mail messages"
 msgstr[0] ""
 "Hay <b>1</b> mensaje nuevo"
 msgstr[1] ""
-"Hay <b>%n</b> mensajes nuevos"
+"Hay <b>%1</b> mensajes nuevos"
 
 #: kcheckgmailcore.cpp:517
 #, kde-format
